# bioimageio_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
bioimg_codegen/: Cargo.toml
bioimg_codegen/src/: as_partial.rs  lib.rs  restore.rs  serde_attributes.rs  util.rs
bioimg_codegen/src/syn_extensions/: mod.rs
bioimg_gui/: Cargo.toml  README.md  index.html
bioimg_gui/src/: app.rs  lib.rs  main.rs  project_data.rs
bioimg_gui/src/widgets/: author_widget.rs  axis_physical_scale_widget.rs  axis_size_widget.rs  axis_widget.rs  binarize_widget.rs  cite_widget.rs  clip_widget.rs  code_editor_widget.rs  collapsible_widget.rs  conda_env_editor_widget.rs  error_display.rs  file_source_widget.rs  fixed_zero_mean_unit_variance_widget.rs  icon_widget.rs  image_widget_2.rs  inout_tensor_widget.rs  input_axis_widget.rs  json_editor_widget.rs  maintainer_widget.rs  mod.rs  model_interface_widget.rs  notice_widget.rs  onnx_weights_widget.rs  output_axis_widget.rs  pipeline_widget.rs  posstprocessing_widget.rs  preprocessing_widget.rs  pytorch_statedict_weights_widget.rs  scale_linear_widget.rs  scale_mean_variance_widget.rs  scale_range_widget.rs  search_and_pick_widget.rs  staging_float.rs  staging_num.rs  staging_opt.rs  staging_string.rs  staging_vec.rs  test_tensor_widget.rs  url_widget.rs  util.rs  (+4 more)
bioimg_runtime/: Cargo.toml
bioimg_runtime/src/: axis_size_resolver.rs  file_source.rs  zip_archive_ext.rs  zoo_model.rs
bioimg_spec/: Cargo.toml  pyproject.toml
bioimg_spec/src/: lib.rs
bioimg_spec/src/py/: mod.rs
bioimg_spec/src/rdf/: attachment.rs  author.rs  basic_chars_string.rs  bounded_string.rs  cite_entry.rs  file_description.rs  file_reference.rs  icon.rs  identifier.rs  license.rs  lowercase.rs  maintainer.rs  mod.rs  non_empty_list.rs  orcid.rs  slashless_string.rs  tag.rs  version.rs
bioimg_spec/src/rdf/literal/: mod.rs
bioimg_spec/src/rdf/model/: axis_size.rs  data_type.rs  dataset_descr.rs  input_tensor.rs  mod.rs  model_rdf_0_5.rs  output_tensor.rs  run_mode.rs  space_unit.rs  time_unit.rs  weights.rs
bioimg_spec/src/rdf/model/axes/: input_axes.rs  mod.rs  output_axes.rs
bioimg_spec/src/rdf/model/postprocessing/: mod.rs
bioimg_spec/src/rdf/model/preprocessing/: binarize.rs  clip.rs  ensure_dtype.rs  mod.rs  scale_linear.rs  scale_range.rs  sigmoid.rs  zero_mean_unit_variance.rs
bioimg_spec/src/util/: mod.rs
bioimg_zoo/src/: auth.rs
bioimg_zoo/tests/: test_model_upload.rs
docs/: bioimg_gui-22f4e634cbfa8d5e.js  bioimg_gui-3ddc45c1a7b4a5a5.js  index.html
git_hooks/: README.md  pre-push  run_hook
hooks_executable/: Cargo.toml  README.md
hooks_executable/src/: main.rs  pre_push.rs  refs.rs
task__build_webapp/: Cargo.toml  README.md
task__build_webapp/src/: main.rs
