[workspace]
members = ["bioimg_codegen", "bioimg_gui", "bioimg_spec", "bioimg_runtime", "bioimg_zoo", "task__build_webapp", "hooks_executable"]
default-members = ["bioimg_gui"]
resolver = "2"

[workspace.package]
version = "0.2.7"
authors = ["Tomaz Vieira<tom.fogaca@gmail.com>"]
edition = "2024"
rust-version="1.89"
license = "MIT"
repository = "https://github.com/kreshuklab/bioimg_rs"

[workspace.dependencies]
image = {version = "0.24.8", features = ["png"]}
iso8601-timestamp = "0.2.17"
ndarray = "0.15.6"
ndarray-npy = "0.8.1"
zip = {version = "3.0", default-features = false}
serde = "1.0.210"
serde_json = "1.0.128"
serde_yaml = "0.9.34+deprecated"
strum = "0.26.3"
thiserror = "1.0.63"
url = "2.5.2"
uuid = "1.10.0"
http = "1.1.0"
sha2 = "0.10.9"
aspartial = { version="0.0.4", features = ["iso8601"] }
unic = "0.9.0"


# FIXME: this is from the egui example app
[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
#[profile.dev.package."*"]
#opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
