[package]
name = "bioimg_gui"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bioimg_spec = {path = "../bioimg_spec"}
bioimg_runtime = {path = "../bioimg_runtime"}
bioimg_zoo = {path = "../bioimg_zoo"}

serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
image = { workspace = true }
url = { workspace=true, features = ["serde"] }
uuid = { workspace = true, features = ["v4"] }
serde_json = { workspace = true }
http = { workspace = true }
ndarray = { workspace = true }
ndarray-npy = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
aspartial = { workspace = true }

egui = { version = "0.31.0", features = ["serde"] }
eframe = { version = "0.31.0" }
egui_extras = { version = "0.31.0", features = ["all_loaders", "syntect"] }

log = "0.4"
rfd = { version = "0.15.1" }
paste = "1.0.14"
bioimg_codegen = { path = "../bioimg_codegen" }
bson = "2.11.0"
indoc = "2.0.5"
itertools = "0.14.0"
sha2 = { workspace = true }
serde_path_to_error = "0.1.17"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4.5.35", features = ["derive"] }
smol = "2.0.2"
ureq = { version = "2.10.1", features = ["http-crate"] }
zip = { workspace = true, default-features = true }
rattler_conda_types = "0.28.3"
env_logger = "0.11.8"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
zip = {workspace = true, default-features = false, features=[
  # "aes-crypto",
  # "bzip2",
  "deflate",
  # "deflate64",
  # "lzma",
  # "time",
  # "xz",
  # "zstd",
]}
